# pennylane-datasets

./: .auth.json  .gitignore  Makefile  README.md  pyproject.toml  update_data.py
.github/: CODEOWNERS
.github/workflows/: build_site.yml  deploy_build.yml  deploy_build_from_main.yml  tag_version.yml  test_lint.yml  test_lint_build.yml
.venv_311/: pyvenv.cfg
lib/dsets/: app.py  content.py  context.py  settings.py
lib/tests/: conftest.py
molecules-amino-acids/_meta/: collection.json
molecules-amino-acids/asp/: dataset.json
molecules-amino-acids/cys/: citation.txt
molecules-amino-acids/gln/: using_this_dataset.md
molecules-amino-acids/gly/: dataset.json
molecules-amino-acids/his/: citation.txt
molecules-amino-acids/ile/: dataset.json
molecules-amino-acids/leu/: citation.txt
molecules-amino-acids/lys/: dataset.json
molecules-amino-acids/met/: dataset.json
molecules-amino-acids/phe/: dataset.json  meta.json
molecules-amino-acids/r_ala/: citation.txt  using_this_dataset.md
molecules-amino-acids/r_arg/: dataset.json
molecules-amino-acids/r_asp/: citation.txt
molecules-amino-acids/r_cys/: dataset.json  using_this_dataset.md
molecules-amino-acids/r_gln/: dataset.json  using_this_dataset.md
molecules-amino-acids/r_his/: citation.txt  dataset.json
molecules-amino-acids/r_ile/: using_this_dataset.md
molecules-amino-acids/r_leu/: citation.txt  using_this_dataset.md
molecules-amino-acids/r_met/: using_this_dataset.md
molecules-amino-acids/r_phe/: citation.txt
molecules-amino-acids/r_ser/: citation.txt  using_this_dataset.md
(+1033 files in other folders)
